support signals with annotated types

https://bugzilla.gnome.org/show_bug.cgi?id=695857